"""initial schema

Revision ID: 4797d03cd403
Revises: 
Create Date: 2026-07-19 00:36:30.481626

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '4797d03cd403'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('data_sources',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('base_url', sa.String(length=500), nullable=False),
    sa.Column('list_selector', sa.String(length=500), nullable=True),
    sa.Column('content_selector', sa.String(length=500), nullable=True),
    sa.Column('enabled', sa.Boolean(), nullable=False),
    sa.Column('crawl_mode', sa.String(length=20), nullable=False),
    sa.Column('source_level', sa.String(length=20), nullable=False),
    sa.Column('owner', sa.String(length=100), nullable=True),
    sa.Column('notes', sa.Text(), nullable=True),
    sa.Column('allowed_domains', sa.Text(), nullable=True),
    sa.Column('request_interval', sa.Integer(), nullable=False),
    sa.Column('last_success_at', sa.DateTime(), nullable=True),
    sa.Column('last_failure_at', sa.DateTime(), nullable=True),
    sa.Column('last_error_message', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('dict_entries',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('category', sa.String(length=30), nullable=False),
    sa.Column('standard_name', sa.String(length=200), nullable=False),
    sa.Column('aliases', sa.Text(), nullable=True),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('category', 'standard_name', name='uq_dict_category_name')
    )
    with op.batch_alter_table('dict_entries', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_dict_entries_category'), ['category'], unique=False)

    op.create_table('knowledge_nodes',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=200), nullable=False),
    sa.Column('alias', sa.Text(), nullable=True),
    sa.Column('node_type', sa.String(length=50), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('source_url', sa.Text(), nullable=True),
    sa.Column('embedding', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('name', 'node_type', name='uq_knowledge_nodes_name_type')
    )
    op.create_table('users',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('username', sa.String(length=50), nullable=False),
    sa.Column('email', sa.String(length=120), nullable=True),
    sa.Column('password_hash', sa.String(length=255), nullable=False),
    sa.Column('role', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username')
    )
    op.create_table('audit_logs',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('actor_id', sa.Integer(), nullable=False),
    sa.Column('action', sa.String(length=50), nullable=False),
    sa.Column('target_type', sa.String(length=50), nullable=True),
    sa.Column('target_id', sa.Integer(), nullable=True),
    sa.Column('summary', sa.Text(), nullable=True),
    sa.Column('metadata_json', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['actor_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('crawl_logs',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('data_source_id', sa.Integer(), nullable=False),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('message', sa.Text(), nullable=True),
    sa.Column('started_at', sa.DateTime(), nullable=False),
    sa.Column('finished_at', sa.DateTime(), nullable=True),
    sa.Column('pages_found', sa.Integer(), nullable=False),
    sa.Column('pages_succeeded', sa.Integer(), nullable=False),
    sa.Column('pages_failed', sa.Integer(), nullable=False),
    sa.Column('duplicates_skipped', sa.Integer(), nullable=False),
    sa.Column('drafts_created', sa.Integer(), nullable=False),
    sa.Column('average_quality_score', sa.Float(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['data_source_id'], ['data_sources.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('posters',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('title', sa.String(length=200), nullable=False),
    sa.Column('raw_text', sa.Text(), nullable=False),
    sa.Column('summary', sa.Text(), nullable=False),
    sa.Column('event_time', sa.DateTime(), nullable=True),
    sa.Column('location', sa.String(length=200), nullable=True),
    sa.Column('organizer', sa.String(length=200), nullable=True),
    sa.Column('status', sa.String(length=30), nullable=False),
    sa.Column('source_type', sa.String(length=30), nullable=False),
    sa.Column('source_url', sa.Text(), nullable=True),
    sa.Column('review_comment', sa.Text(), nullable=True),
    sa.Column('created_by', sa.Integer(), nullable=False),
    sa.Column('duplicate_group_key', sa.String(length=64), nullable=True),
    sa.Column('source_fingerprint', sa.String(length=64), nullable=True),
    sa.Column('quality_score', sa.Integer(), nullable=True),
    sa.Column('quality_notes', sa.Text(), nullable=True),
    sa.Column('tags', sa.Text(), nullable=True),
    sa.Column('activity_type', sa.String(length=50), nullable=True),
    sa.Column('content_html', sa.Text(), nullable=True),
    sa.Column('last_crawled_at', sa.DateTime(), nullable=True),
    sa.Column('embedding', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('posters', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_posters_duplicate_group_key'), ['duplicate_group_key'], unique=False)
        batch_op.create_index(batch_op.f('ix_posters_source_fingerprint'), ['source_fingerprint'], unique=False)

    op.create_table('publisher_applications',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('reason', sa.Text(), nullable=True),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('review_comment', sa.Text(), nullable=True),
    sa.Column('reviewed_at', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id')
    )
    op.create_table('subscriptions',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('node_id', sa.Integer(), nullable=True),
    sa.Column('keyword', sa.String(length=200), nullable=True),
    sa.Column('notify_method', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.CheckConstraint('node_id IS NOT NULL OR keyword IS NOT NULL', name='ck_subscription_target'),
    sa.ForeignKeyConstraint(['node_id'], ['knowledge_nodes.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('activity_attachments',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('owner_id', sa.Integer(), nullable=False),
    sa.Column('poster_id', sa.Integer(), nullable=True),
    sa.Column('original_name', sa.String(length=255), nullable=False),
    sa.Column('stored_name', sa.String(length=255), nullable=False),
    sa.Column('mime_type', sa.String(length=120), nullable=False),
    sa.Column('size', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['owner_id'], ['users.id'], ),
    sa.ForeignKeyConstraint(['poster_id'], ['posters.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('stored_name')
    )
    with op.batch_alter_table('activity_attachments', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_activity_attachments_owner_id'), ['owner_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_activity_attachments_poster_id'), ['poster_id'], unique=False)

    op.create_table('activity_favorites',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('poster_id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['poster_id'], ['posters.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('poster_id', 'user_id', name='uq_activity_favorite_user')
    )
    op.create_table('activity_registrations',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('poster_id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('student_id', sa.String(length=100), nullable=False),
    sa.Column('college', sa.String(length=100), nullable=False),
    sa.Column('contact_email', sa.String(length=120), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['poster_id'], ['posters.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('poster_id', 'user_id', name='uq_activity_registration_user')
    )
    op.create_table('notifications',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('poster_id', sa.Integer(), nullable=False),
    sa.Column('title', sa.String(length=200), nullable=False),
    sa.Column('body', sa.Text(), nullable=True),
    sa.Column('is_read', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['poster_id'], ['posters.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('notifications', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_notifications_user_id'), ['user_id'], unique=False)

    op.create_table('poster_links',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('from_poster_id', sa.Integer(), nullable=False),
    sa.Column('to_poster_id', sa.Integer(), nullable=False),
    sa.Column('link_type', sa.String(length=50), nullable=False),
    sa.Column('created_by_rule', sa.String(length=100), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['from_poster_id'], ['posters.id'], ),
    sa.ForeignKeyConstraint(['to_poster_id'], ['posters.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('from_poster_id', 'to_poster_id', 'link_type', name='uq_poster_link_type')
    )
    op.create_table('poster_node',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('poster_id', sa.Integer(), nullable=False),
    sa.Column('node_id', sa.Integer(), nullable=False),
    sa.Column('relation_type', sa.String(length=50), nullable=False),
    sa.Column('matched_by', sa.String(length=30), nullable=False),
    sa.ForeignKeyConstraint(['node_id'], ['knowledge_nodes.id'], ),
    sa.ForeignKeyConstraint(['poster_id'], ['posters.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('poster_id', 'node_id', 'relation_type', name='uq_poster_node_relation')
    )
    op.create_table('user_calendar_events',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('poster_id', sa.Integer(), nullable=False),
    sa.Column('added_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['poster_id'], ['posters.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', 'poster_id', name='uq_user_calendar_event')
    )
    with op.batch_alter_table('user_calendar_events', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_user_calendar_events_user_id'), ['user_id'], unique=False)

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('user_calendar_events', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_user_calendar_events_user_id'))

    op.drop_table('user_calendar_events')
    op.drop_table('poster_node')
    op.drop_table('poster_links')
    with op.batch_alter_table('notifications', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_notifications_user_id'))

    op.drop_table('notifications')
    op.drop_table('activity_registrations')
    op.drop_table('activity_favorites')
    with op.batch_alter_table('activity_attachments', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_activity_attachments_poster_id'))
        batch_op.drop_index(batch_op.f('ix_activity_attachments_owner_id'))

    op.drop_table('activity_attachments')
    op.drop_table('subscriptions')
    op.drop_table('publisher_applications')
    with op.batch_alter_table('posters', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_posters_source_fingerprint'))
        batch_op.drop_index(batch_op.f('ix_posters_duplicate_group_key'))

    op.drop_table('posters')
    op.drop_table('crawl_logs')
    op.drop_table('audit_logs')
    op.drop_table('users')
    op.drop_table('knowledge_nodes')
    with op.batch_alter_table('dict_entries', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_dict_entries_category'))

    op.drop_table('dict_entries')
    op.drop_table('data_sources')
    # ### end Alembic commands ###
